Initell commit hvor søknad er flyttet.